--- a/app/src/main/resources/Messages.properties
+++ b/app/src/main/resources/Messages.properties
@@ -2,6 +2,6 @@ javax.faces.validator.LengthValidator.MAXIMUM=Length is greater than allowable m
 javax.faces.validator.LengthValidator.MINIMUM=Length is less than allowable minimum of ''{0}''
 
 
-jaz.app.name = Allezon
+app.name = Alien Brain
 p = Haslo Should have at least one small letter, one big letter, and numbers, and should be minimum of 8 characters long.
 u = Username can have only small letters and numbers.
